# Memory-Bot

./: .env.example  README.md  main.py  pyproject.toml
src/: bot.py
src/components/: ai_services.py  cmd_handlers.py  memory_client.py  minio_client.py
src/utils/: config.py  models.py
